# sys-prog-5

./: CMakeLists.txt  CMakePresets.json  README.md
include/: status.h
include/game/: game.h  game_client.h  game_server.h  protocol.h
src/: main.c
src/game/: game.c  game_client.c  game_server.c  protocol.c
